:lipstick:  Fix overlapping positioning of error_tag in forms

--- a/assets/css/alerts.css
+++ b/assets/css/alerts.css
@@ -2,7 +2,7 @@
   .invalid-feedback {
     color: #a94442;
     display: block;
-    margin: -1rem 0 2rem;
+    margin: 0.2rem 0;
   }
 
   .alert {
